<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:scrollbars="vertical"
    android:overScrollMode="ifContentScrolls"
    android:fadeScrollbars="true"
    tools:context=".ui.activities.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp"
        android:gravity="center">
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_200sdp"
            android:id="@+id/lottie_login_anim"
            app:lottie_rawRes="@raw/signin_anim"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            android:layout_marginVertical="@dimen/_8sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            app:endIconMode="clear_text"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:padding="@dimen/_8sdp"
                android:textColorHint="#757575"
                android:textSize="@dimen/_14ssp"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:theme="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_width="match_parent"
            app:endIconMode="password_toggle"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:textColorHint="#757575"
                android:textSize="@dimen/_14ssp"
                tools:ignore="VisualLintTextFieldSize" />
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:text="@string/log_in"
            android:id="@+id/btn_login"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/light"
            tools:ignore="VisualLintButtonSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/dark"
                android:textSize="@dimen/_14ssp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/light"
                android:text="@string/register"
                android:id="@+id/tv_login_textRegister"
                />
        </LinearLayout>
    </LinearLayout>

</ScrollView>